🐛  fix: spacing [temp]

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -81,6 +81,9 @@
 }
 
 @theme inline {
+  /* TODO: Change to use REM */
+
+  --spacing: 4px;
   --default-transition-duration: 300ms;
 
   /* Breakpoints */
